--- a/Backend/Que-tools/src/main/resources/application.properties
+++ b/Backend/Que-tools/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=Que-tools
 
-spring.datasource.url=jdbc:mysql://localhost:3306/qtools
+spring.datasource.url=jdbc:mysql://localhost:3306/qtoolsdb
 spring.datasource.username=root
 spring.datasource.password=theseCTDdays
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
